# sea-orm-postgresql-demo

./: .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20230903_084439_create_table_users.rs  m20230903_084447_create_table_todos.rs
src/: lib.rs
src/entities/: mod.rs  prelude.rs  users.rs
