[package]
name = "sea-orm-postgresql-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
dotenv = "0.15.0"
